<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>neo_localization2</name>
    <version>1.0.0</version>
    <description>
		Platform localization node based on laser sensors and a grid map.
    </description>
    <author>Max Wittal</author>
    <maintainer email="ros@neobotix.de">Neobotix GmbH</maintainer>
    <maintainer email="padmanabhan@neobotix.de">Pradheep Padmanabhan</maintainer>
    <license>MIT</license>
    <url>https://github.com/neobotix/neo_localization2</url>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>tf2_eigen</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>tf2_sensor_msgs</exec_depend>
    <exec_depend>tf2_geometry_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>neo_common2</exec_depend>
    <exec_depend>std_srvs</exec_depend>
    <exec_depend>angles</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>


